[gd_scene load_steps=4 format=3 uid="uid://b3locbppi35js"]

[ext_resource type="Theme" uid="uid://bv467htpxf00q" path="res://ui/ui.tres" id="1_8oj5j"]
[ext_resource type="Script" path="res://ui/options_menu.gd" id="1_841oo"]
[ext_resource type="Material" uid="uid://fhg3qqai4nlg" path="res://ui/pause_menu.tres" id="2_bbmla"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_841oo")

[node name="Blur" type="ColorRect" parent="."]
material = ExtResource("2_bbmla")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -30.5
offset_right = 51.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2

[node name="InvincibleHBox" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_8oj5j")

[node name="InvincibleCheckButton" type="CheckButton" parent="VBoxContainer/InvincibleHBox"]
layout_mode = 2
theme = ExtResource("1_8oj5j")

[node name="InvincibleButton" type="Button" parent="VBoxContainer/InvincibleHBox"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8oj5j")
theme_override_font_sizes/font_size = 55
text = "Invincible"

[node name="NoStoryMode" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8oj5j")

[node name="NoStoryCheckButton" type="CheckButton" parent="VBoxContainer/NoStoryMode"]
layout_mode = 2

[node name="NoStoryButton" type="Button" parent="VBoxContainer/NoStoryMode"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8oj5j")
theme_override_font_sizes/font_size = 55
text = "No Story"

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_8oj5j")
theme_override_font_sizes/font_size = 55
text = "Resume"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_8oj5j")
theme_override_font_sizes/font_size = 55
text = "Quit"

[connection signal="pressed" from="VBoxContainer/InvincibleHBox/InvincibleCheckButton" to="." method="_on_invincible_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InvincibleHBox/InvincibleButton" to="." method="_on_invincible_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NoStoryMode/NoStoryCheckButton" to="." method="_on_no_story_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NoStoryMode/NoStoryButton" to="." method="_on_no_story_button_pressed"]
[connection signal="toggled" from="VBoxContainer/NoStoryMode/NoStoryButton" to="." method="_on_no_story_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
